[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "twtr"
version = "0.0.3"
description = "Minimal CLI to tweet via Twitter API."
authors = [ { name = "Kian Kyars" } ]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["tweepy"]

[project.scripts]
twtr = "twtr.cli:main" 

[tool.hatch.build.targets.wheel]
packages = ["src/twtr"]